# python-clamd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/clamd/: __init__.py
src/tests/: test_api.py
