[project]
name = "clamd"
version = "0.1.0"
description = "It is a fork of https://github.com/graingert/python-clamd. It was forked to cleanup some deprecated code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["python", "clamav", "antivirus", "scanner", "virus", "libclamav", "clamd"]
classifiers = [
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/userlike/python-clamd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clamd"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
